# claude-split

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/code-reviewer/: code-reviewer.md
agents/researcher/: researcher.md
agents/shared/: core-operating-principle.md
agents/sme/: sme.md
agents/tech-lead/: tech-lead.md
agents/technical-writer/: technical-writer.md
agents/ux-designer/: ux-designer.md
docs/: review-2026-04-14.md
docs/competitive-analysis/: factory-droid-missions.md  gap-analysis.md  gastown.md  paperclip-ai.md  superpowers.md
docs/superpowers/plans/: 2026-04-13-split-agent-outcomes.md  2026-04-13-split-board-logging.md
docs/superpowers/specs/: 2026-04-10-split-ai-design.md  2026-04-10-split-design.md  2026-04-10-split-flow.md  2026-04-11-dashboard-mockup.md  2026-04-11-split-board-cli-design.md  2026-04-13-split-agent-outcomes-design.md  2026-04-13-split-board-logging-design.md
hooks/: hooks.json  install-cli.sh
split/agents/: code-reviewer.md  devops.md  researcher.md  security-reviewer.md  senior-dev.md  sme.md  tech-lead.md  technical-writer.md  test-writer.md  ux-designer.md  verifier.md
split/hooks/: approve-split-board.sh  guard-board.sh  hooks.json  install-cli.sh
split/prompts/: core-operating-principle.md
split/tools/: pyproject.toml
split/tools/src/split_board/: __main__.py  _dashboard.py  board.py  cli.py  commands.py  validation.py
src/split_board/: board.py  cli.py  commands.py  validation.py
tests/: test_split_board.py
tools/: split_board_dashboard.py
(+22 files in other folders)
